Improvement and Creation
Actualizaciones de los archivos Gradle y creación de Beerute_Maps03 y Beerute_Maps04 (calculo de rutas optimizadas en mapas de carreteras y caminos)

--- a/Beerute_Maps04/app/build.gradle
+++ b/Beerute_Maps04/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.beerute_maps02'
+    namespace 'com.example.beerute_maps04'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.beerute_maps02"
+        applicationId "com.example.beerute_maps04"
         minSdk 23
         targetSdk 33
         versionCode 1
@@ -38,7 +38,15 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    //Map
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
+
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
