--- a/Beerute_F01/app/src/main/AndroidManifest.xml
+++ b/Beerute_F01/app/src/main/AndroidManifest.xml
@@ -35,6 +35,14 @@
             android:exported="false" />
 
         <activity
+            android:name=".CreatedActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".DBActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".ProfileActivity"
             android:exported="false" />
 
