--- a/Beerute_F01/app/build.gradle
+++ b/Beerute_F01/app/build.gradle
@@ -45,10 +45,15 @@ dependencies {
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:32.1.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-config-ktx:21.4.0'
+    implementation 'com.google.firebase:firebase-messaging:23.1.2'
 
     //FireBase_Login
     implementation 'com.google.firebase:firebase-auth:22.0.0'
     implementation 'com.google.android.gms:play-services-auth:20.5.0'
+
+    //Firebase_DB
+    implementation 'com.google.firebase:firebase-firestore:24.6.1'
 
     //Map
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
