Create the Layout List Routes
Se ha creado la funcionalidad de listar cada una de las Rutas que se han guardado en la Base de Datos de Firebase, así como el muestreo de información relevante.

--- a/Beerute_F01/app/src/main/AndroidManifest.xml
+++ b/Beerute_F01/app/src/main/AndroidManifest.xml
@@ -39,8 +39,31 @@
             android:exported="false" />
 
         <activity
+            android:name=".IAHelpActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".DBActivity"
             android:exported="false" />
+
+        <activity
+            android:name=".StepCounter.StepCounterMain"
+            android:exported="false" />
+
+        <activity
+            android:name=".StepCounter.StepsCounterActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".StepCounter.CustomAlgoResultsActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".StepCounter.StepsHistoryActivity"
+            android:exported="false" />
+
+        <service android:name=".StepCounter.StepsTrackerService" />
+        <service android:name=".StepCounter.StepsService" />
 
         <activity
             android:name=".ProfileActivity"
