--- a/Beerute_F01/app/build.gradle
+++ b/Beerute_F01/app/build.gradle
@@ -32,6 +32,15 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    // dataBinding
+    dataBinding {
+        //noinspection DataBindingWithoutKapt
+        enabled = true
+    }
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -40,7 +49,13 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
+
+    //Vistas
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+
+    //RouteAdapter
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
 
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:32.1.0')
@@ -50,7 +65,7 @@ dependencies {
 
     //FireBase_Login
     implementation 'com.google.firebase:firebase-auth:22.0.0'
-    implementation 'com.google.android.gms:play-services-auth:20.5.0'
+    implementation 'com.google.android.gms:play-services-auth:20.6.0'
 
     //Firebase_DB
     implementation 'com.google.firebase:firebase-firestore:24.6.1'
