IA, Explorer, StepCounter & CreateRoute
Creación de una pantalla conectada a Inteligencia Artificial, la cual ayude a los usuarios a descubrir nuevas rutas, a saber qué llevarte a cada vieja, etc. Creación de la pantalla de Explorar las Rutas creadas, la cual sirve para acceder a las rutas guardadas en la base de datos de la nube. Creación de un contador de pasos que además cuente los kilómetros recorridos y el tiempo en el cual se ha llevado a cabo ese recorrido. Finalmente la creación de varias funcionalidades relaccionadas con la creación de la grabación de Rutas.

--- a/Beerute_F01/app/src/main/AndroidManifest.xml
+++ b/Beerute_F01/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
             android:value="@string/google_maps_key" />
 
         <activity
+            android:name=".RegisterUserActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".MainActivity"
             android:exported="false" />
 
@@ -35,15 +39,15 @@
             android:exported="false" />
 
         <activity
-            android:name=".CreatedActivity"
-            android:exported="false" />
-
-        <activity
             android:name=".IAHelpActivity"
             android:exported="false" />
 
         <activity
             android:name=".DBActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".testActivity"
             android:exported="false" />
 
         <activity
@@ -60,6 +64,10 @@
 
         <activity
             android:name=".StepCounter.StepsHistoryActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".NewStepCounterActivity"
             android:exported="false" />
 
         <service android:name=".StepCounter.StepsTrackerService" />
