--- a/Beerute_F01/app/build.gradle
+++ b/Beerute_F01/app/build.gradle
@@ -50,6 +50,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
 
+    //IA
+    implementation("com.squareup.okhttp3:okhttp:4.10.0")
+
     //Vistas
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
