--- a/Beerute_F01/app/build.gradle
+++ b/Beerute_F01/app/build.gradle
@@ -63,15 +63,17 @@ dependencies {
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:32.1.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-config-ktx:21.4.0'
-    implementation 'com.google.firebase:firebase-messaging:23.1.2'
+    implementation 'com.google.firebase:firebase-config-ktx:21.4.1'
+
+    //Firebase_Messaging
+    implementation 'com.google.firebase:firebase-messaging:23.2.0'
 
     //FireBase_Login
-    implementation 'com.google.firebase:firebase-auth:22.0.0'
+    implementation 'com.google.firebase:firebase-auth:22.1.0'
     implementation 'com.google.android.gms:play-services-auth:20.6.0'
 
     //Firebase_DB
-    implementation 'com.google.firebase:firebase-firestore:24.6.1'
+    implementation 'com.google.firebase:firebase-firestore:24.7.0'
 
     //Map
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
@@ -80,6 +82,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
