Repository Update & activity_ranking
Se ha creado la pantalla donde se visualizan los 10 Usuarios que han recorrido más kilómetros en sus rutas.

--- a/Beerute_F01/app/src/main/AndroidManifest.xml
+++ b/Beerute_F01/app/src/main/AndroidManifest.xml
@@ -48,19 +48,11 @@
             android:exported="false" />
 
         <activity
+            android:name=".RankingActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".IAHelpActivity"
-            android:exported="false" />
-
-        <activity
-            android:name=".testActivity"
-            android:exported="false" />
-
-        <activity
-            android:name=".NewStepCounterActivity"
-            android:exported="false" />
-
-        <activity
-            android:name=".LogicRouteActivity"
             android:exported="false" />
 
         <activity
