--- a/Beerute_F01/app/build.gradle
+++ b/Beerute_F01/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 
 android {
     namespace 'com.example.beerute_f01'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.beerute_f01"
         minSdk 23
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -46,19 +46,19 @@ android {
 dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.material:material:1.10.0'
 
     //IA
     implementation("com.squareup.okhttp3:okhttp:4.10.0")
 
     //Vistas
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
 
     //RouteAdapter
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
 
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:32.1.0')
@@ -66,14 +66,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-config-ktx:21.4.1'
 
     //Firebase_Messaging
-    implementation 'com.google.firebase:firebase-messaging:23.2.0'
+    implementation 'com.google.firebase:firebase-messaging:23.2.1'
 
     //FireBase_Login
-    implementation 'com.google.firebase:firebase-auth:22.1.0'
-    implementation 'com.google.android.gms:play-services-auth:20.6.0'
+    implementation 'com.google.firebase:firebase-auth:22.1.2'
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
 
     //Firebase_DB
-    implementation 'com.google.firebase:firebase-firestore:24.7.0'
+    implementation 'com.google.firebase:firebase-firestore:24.8.1'
 
     //Map
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
@@ -83,6 +83,11 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+
+    //Glide Android
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
