--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -25,8 +25,9 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          gradlew sonarqube ^
-            -Dsonar.organization= ^
-            -Dsonar.projectKey=BEERUTE_REPOSITORIO ^
-            -Dsonar.host.url=https://sonarcloud.io ^
-            -Dsonar.login=%SONAR_TOKEN%
+          gradlew sonarqube \
+            -Dsonar.organization= \
+            -Dsonar.projectKey=BEERUTE_REPOSITORIO \
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.login=$SONAR_TOKEN \
+            -Dsonar.scanner.distribution=SonarScannerDistribution
