--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -29,4 +29,5 @@ jobs:
             -Dsonar.organization=Carlos.Moreno27@alu.uclm.es \
             -Dsonar.projectKey=BEERUTE_REPOSITORIO \
             -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.login=$SONAR_TOKEN
+            -Dsonar.login=$SONAR_TOKEN \
+            -Dsonar.scanner.distribution=SonarScanner
